// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buttonClassNames 1`] = `
Object {
  "Options": Object {
    "buttonClassNames": [Function],
    "buttonText": [Function],
    "disabled": [Function],
    "iconClassNames": "",
    "index": 1,
    "item": "foo",
  },
  "html": "<button class=\\"foo1\\"><!--0--></button>",
}
`;

exports[`buttonText 1`] = `
Object {
  "Options": Object {
    "buttonClassNames": [Function],
    "buttonText": [Function],
    "disabled": [Function],
    "iconClassNames": "",
    "index": 1,
    "item": "Foo",
  },
  "html": "<button class=\\"\\"><!--0-->Foo1</button>",
}
`;

exports[`disabled 1`] = `
Object {
  "Options": Object {
    "buttonClassNames": [Function],
    "buttonText": [Function],
    "disabled": [Function],
    "iconClassNames": "",
    "index": 1,
    "item": "foo",
  },
  "html": "<button class=\\"\\" disabled=\\"\\"><!--0--></button>",
}
`;

exports[`iconClassNames 1`] = `
Object {
  "Options": Object {
    "buttonClassNames": [Function],
    "buttonText": [Function],
    "disabled": [Function],
    "iconClassNames": "foo",
  },
  "html": "
<button class=\\"\\">
  <i class=\\"foo\\"></i><!--0-->Text
</button>
",
}
`;

exports[`renders correctly 1`] = `
Object {
  "Options": Object {
    "buttonClassNames": [Function],
    "buttonText": [Function],
    "disabled": [Function],
    "iconClassNames": "",
  },
  "html": "<button class=\\"\\"><!--0--></button>",
}
`;
